# bvi_itinerary

./: =4.1  MANIFEST.in  README.md  pyproject.toml
bvi_itinerary/: apps.py  urls.py  views.py
bvi_itinerary/fixtures/: stops.json
bvi_itinerary/static/: stops.json
bvi_itinerary/static/css/: itinerary_styles.css  styles.css
bvi_itinerary/static/js/: itinerary_routing.js  routing.js
bvi_itinerary/templates/: bvi_itinerary.html
