[tool.poetry]
name = "bvi-itinerary"
version = "0.1.0"
description = "Itinerary planner for sailing BVI"
authors = ["Nick Fournier <nichfournier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
