[tool.poetry]
name = "bvi-itinerary"
version = "0.1.1"
description = "Itinerary planner for sailing BVI"
authors = ["Nick Fournier <nichfournier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
