[project]
name = "bvi-itinerary"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nick-fournier", email = "nichfournier@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
]

[project.scripts]
bvi-itinerary = "bvi_itinerary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
